gts-macros/tests/compile_fail/base_parent_mismatch.stderr
error: struct_to_gts_schema: Base structs must have either an ID field (one of: $id, id, gts_id, or gtsId) of type GtsInstanceId OR a GTS Type field (one of: type, gts_type, gtsType, or schema) of type GtsSchemaId
  --> tests/compile_fail/base_parent_mismatch.rs:15:12
   |
15 | pub struct BaseEventV1<P> {
   |            ^^^^^^^^^^^
